--- a/client/app/index.html
+++ b/client/app/index.html
@@ -20,12 +20,13 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
+    <div class="container" ng-controller="AppController">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="#/login">Login</a></li>
+          <li><a ng-href="#admin">Admin</a></li>
+          <li ng-if="currentUser" class="hello pull-right">Hello {{currentUser.name}}!</li>
         </ul>
         <h3 class="text-muted">libertador</h3>
       </div>
@@ -36,18 +37,6 @@
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
@@ -84,7 +73,12 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/app.js"></script>
+        <script src="scripts/services/auth/auth-constants.js"></script>
+        <script src="scripts/services/auth/auth-service.js"></script>
+        <script src="scripts/services/auth/session.js"></script>
+        <script src="scripts/services/urlconfig.js"></script>
         <!-- endbuild -->
 </body>
 </html>
