--- a/client/app/index.html
+++ b/client/app/index.html
@@ -50,11 +50,7 @@
 
         <div class="view-animate" ng-view="" ng-animate="'animate'"></div>
 
-        <div class="footer">
-            <p>
-                <span class="glyphicon glyphicon-heart"></span>
-            </p>
-        </div>
+        <div class="footer"></div>
     </div>
 
     <!-- build:js(.) scripts/oldieshim.js -->
@@ -86,6 +82,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -100,8 +97,11 @@
         <script src="scripts/services/auth/auth-service.js"></script>
         <script src="scripts/services/auth/session.js"></script>
         <script src="scripts/services/urlconfig.js"></script>
+        <script src="scripts/services/products.js"></script>
 
         <script src="scripts/directives/header.js"></script>
+        <script src="scripts/directives/consumption.js"></script>
+        <script src="scripts/directives/productList.js"></script>
         <!-- endbuild -->
 </body>
 </html>
