client box improvements

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container-fluid" ng-controller="AppController">
-        <div class="header text-center">
+        <div class="header text-center clearfix">
             <img class="header-logo" src="images/logo-flag.png" alt="Libertador">
             <!-- <span class="header-bkg"></span> -->
             <ul class="nav nav-pills pull-right">
@@ -99,6 +99,7 @@
         <script src="scripts/services/auth/session.js"></script>
         <script src="scripts/services/urlconfig.js"></script>
         <script src="scripts/services/products.js"></script>
+        <script src="scripts/services/clients.js"></script>
 
         <script src="scripts/directives/header.js"></script>
         <script src="scripts/directives/consumption.js"></script>
